--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "App",
+  "name": "FYP_FRONTEND",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -27,7 +27,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.4",
-    "@angular/cli": "~11.0.4",
+    "@angular/cli": "~11.0.5",
     "@angular/compiler-cli": "~11.0.4",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
