--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@angular/animations": "~11.0.4",
     "@angular/cdk": "^11.0.2",
     "@angular/common": "~11.0.4",
-    "@angular/compiler": "~11.0.4",
     "@angular/core": "~11.0.4",
     "@angular/forms": "~11.0.4",
     "@angular/material": "^11.0.2",
@@ -27,7 +26,8 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.4",
-    "@angular/cli": "~11.0.5",
+    "@angular/cli": "^11.0.5",
+    "@angular/compiler": "^11.0.5",
     "@angular/compiler-cli": "~11.0.4",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
