--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "FYP_FRONTEND",
+  "name":"FYP_FRONTEND",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -19,11 +19,14 @@
     "@angular/compiler": "^11.0.5",
     "@angular/compiler-cli": "~11.0.4",
     "@angular/core": "~11.0.4",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.0.4",
-    "@angular/material": "^11.0.2",
+    "@angular/material": "^11.0.3",
     "@angular/platform-browser": "~11.0.4",
     "@angular/platform-browser-dynamic": "~11.0.4",
     "@angular/router": "~11.0.4",
+    "@ngbmodule/material-carousel": "^0.7.1",
+    "@ngmodule/material-carousel": "^0.6.0",
     "express": "^4.17.1",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
